test/visibility/rename/repeatNewNames.good
repeatNewNames.chpl:8: error: already renamed 'a' to 'bleep', renaming 'b' would conflict
